--- a/config/about.toml
+++ b/config/about.toml
@@ -6,7 +6,7 @@ birthday = "May 10, 1997"
 location = "Yogyakarta, Indonesia"
 avatar = "./config/assets/avatars/my-avatar.png"
 username = "raistech" # <-- github user name
-googlemaps = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd" 
+googlemaps = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63245.97085555591!2d110.33364522980808!3d-7.803248457468688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5787bd5b6bc5%3A0x21723fd4d3684f71!2sYogyakarta%2C%20Kota%20Yogyakarta%2C%20Daerah%20Istimewa%20Yogyakarta!5e0!3m2!1sid!2sid!4v1723720824093!5m2!1sid!2sid" 
 presentation = """
 I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media. I enjoy turning complex problems into simple, beautiful and intuitive designs.
 
